# ftp_player

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: FindVLC.cmake
include/: CMakeLists.txt
include/Client/: CMakeLists.txt  Client.h
include/FTPClient/: CMakeLists.txt  FTPClient.h
include/UARTCommunication/: CMakeLists.txt  UARTCommunication.h
include/VLCPlayer/: CMakeLists.txt  VLCPlayer.h
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Client.cpp
src/FTPClient/: CMakeLists.txt  FTPClient.cpp
src/UARTCommunication/: CMakeLists.txt  UARTCommunication.cpp
src/VLCPlayer/: CMakeLists.txt  VLCPlayer.cpp
tests/: CMakeLists.txt  test_UARTCommunication.cpp
tests/UARTCommunication/: CMakeLists.txt
tests/UARTCommunication/MockUARTCommunication/: CMakeLists.txt  MockUARTCommunication.cpp  MockUARTCommunication.h  MockUARTCommunicationTest.cpp
tests/UARTCommunication/UnitUARTCommunication/: CMakeLists.txt  UnitUARTCommunicationTest.cpp
